GNOME Bugzilla – Bug 586309
Fix hiding newly added windows with live_hidden_windows
Last modified: 2009-06-19 15:42:10 UTC
When we add a window and it gets hidden as the first thing, we need to show not just the frame window, but also the window itself. Otherwise when the window subsequently becomes visible, it will just be an empty frame. Add helper functions to reduce current code duplication and avoid adding more.
Created attachment 136947 [details] [review] Fix hiding newly added windows with live_hidden_windows
Patch looks good, please commit.
Pushed